# scylla-aws-keyspaces-authenticator

./: Cargo.toml  README.md
examples/: aws-keyspaces-cert.pem  example_query.rs
src/: crypto.rs  lib.rs
